# infor_txt_reader

./: README.md  pyproject.toml  reader.py
src/infor_txt_reader/: __init__.py  reader.py
